--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -104,10 +104,10 @@
 
         if (order) {
             var options = {
-                "key": "rzp_test_damILfDssLwsZg", // Insert your Razorpay key ID inside double quote
+                "key": "", // Insert your Razorpay key ID inside double quote
                 "amount": order.amount,
                 "currency": "INR",
-                "name": "BACHCHU CHATTERJEE", // Insert your Razorpay account name inside double quote
+                "name": "", // Insert your Razorpay account name inside double quote
                 "description": "Order for Test",
                 "order_id": order.razorpayOrderId,
                 "receipt": order.email,
